# bazel-latex

./: .gitignore  BUILD.bazel  LICENSE  README.md  dblp.py  dblpify.py  get_arxivable.sh  get_file.sh  get_pdf.sh  latex.bzl  pdfcrop.bzl  pdfcrop.sh  repositories.bzl  run_latex.py  setup_texlive.sh
