exports_files([
    "run_latex.py",
    "view_pdf.sh",
    "get_file.sh",
    "get_arxivable.sh",
    "pdfcrop.sh",
])

py_binary(
    name = "dblpify",
    srcs = ["dblpify.py"],
    deps = [":dblp"],
    visibility = ["//visibility:public"],
)

py_library(
    name = "dblp",
    srcs = ["dblp.py"],
)
